<resources>
    <string name="app_name">Worldwide Wonders</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Log-In</string>
    <string name="or">OR</string>

    <string name="findLocation">Enter a Destination</string>
    <string name="logout">Logout</string>

    <!--Sign Up page information -->
    <string name="SignUpemail">Your Email</string>
    <string name="SignUppassword">Your Password</string>
    <string name="SignUpname">Name</string>
    <string name="SignUp">Finish Registration!</string>
    <string name="signUpText">Welcome to the Workout Tracker, sign-up below to get started on your workout today!</string>

    <string name="submit">Submit!</string>
    <string name="createAccount">Create Account</string>
    <string name="title_activity_input">Find a Destination!</string>


    <string name="attractions">Attractions</string>
    <string name="restaurants">Restaurants</string>
    <string name="Museum">Museums</string>
    <string name="shop">Shopping</string>
    <string name="title_activity_find_places">Popular Destinations</string>
    <string name="title_activity_places_detail">Destination Details</string>


    <string name="destinationCategory">Category of Destination:</string>
    <string name="address">Address:</string>
    <string name="title_activity_saved_places">SavedPlacesActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
