<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mayer.travelapp.ui.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:id="@+id/main_text"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="439dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        />
    <Button
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/main_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.682"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="#70656668"
        android:textColor="#FFFFFF"/>
    <Button
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/login"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/main_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.907"
        android:textAllCaps="false"
        android:background="#70656668"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
